# herp-logger

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  cabal.project  default.nix  herp-logger.cabal  package.yaml  shell.nix
gen-proto/Protos/Herp/Log/: HttpLog.hs
herp-http-logger/: herp-http-logger.cabal
herp-http-logger/gen-proto/Protos/Herp/Log/: HttpLog.hs
herp-http-logger/src/Herp/: HttpLogger.hs
nix/: sources.json
src/Herp/: HttpLogger.hs  Logger.hs
src/Herp/Logger/: LogLevel.hs  Payload.hs  SentryTransport.hs  StdoutANSITransport.hs  StdoutTransport.hs  Transport.hs
src/Herp/Logger/ANSI/: Coloring.hs
src/Herp/Logger/Transport/: Sentry.hs  Stdout.hs  Types.hs
tests/: abort.hs  hook.hs  ignoreDebugMessage.hs  stdout.hs
