cabal-version: 3.0

name:           herp-http-logger
version:        0
description:    Please see the README on GitHub at <https://github.com/herp-inc/herp-hslib#readme>
build-type:     Simple

library
  ghc-options: -Wall -Wcompat -Wunused-packages
  exposed-modules:
      Herp.HttpLogger
  other-modules:
      Protos.Herp.Log.HttpLog
  hs-source-dirs:
      src
      gen-proto
  default-extensions:
      ConstraintKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DuplicateRecordFields
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NamedWildCards
      NegativeLiterals
      NumericUnderscores
      OverloadedStrings
      PackageImports
      PartialTypeSignatures
      PatternSynonyms
      PolyKinds
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      Strict
      StrictData
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      DeriveAnyClass
      DataKinds
      GADTs
      BangPatterns
      OverloadedLabels
      GeneralizedNewtypeDeriving
      DerivingStrategies
      BlockArguments
      ImplicitParams
      InstanceSigs
      ImportQualifiedPost
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , case-insensitive
    , containers
    , deepseq
    , proto3-suite
    , proto3-wire
    , text
    , time
    , vector
    , wai
  default-language: Haskell2010
